Fixed #12 Support external database configuration